src/main/java/com/example/demo/Error/InsufficientPermissionsException.java
package com.example.demo.Error;

public class InsufficientPermissionsException extends RuntimeException {

    public InsufficientPermissionsException(String message) {

        super(message);
    }
}
